[package]
name = "skia-safe-fiddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["skia-safe/default", "skia-safe/metal", "skia-safe/textlayout"]
metal = ["skia-safe/metal"]

[dependencies]
cocoa = "0.25.0"
core-graphics-types = "0.1.3"
metal = "0.27.0"
objc = "0.2.7"
skia-safe = "0.69.0"
winit = "0.29.8"
